@@ -5,12 +5,16 @@ import app.oengus.dao.ApplicationUserInformationRepository;
 import app.oengus.entity.constants.ApplicationStatus;
 import app.oengus.entity.constants.SocialPlatform;
 import app.oengus.entity.dto.*;
+import app.oengus.entity.dto.v2.simple.SimpleCategoryDto;
+import app.oengus.entity.dto.v2.simple.SimpleGameDto;
+import app.oengus.entity.dto.v2.users.ModeratedHistoryDto;
+import app.oengus.entity.dto.v2.users.ProfileDto;
+import app.oengus.entity.dto.v2.users.ProfileHistoryDto;
 import app.oengus.entity.model.*;
 import app.oengus.helper.BeanHelper;
 import app.oengus.helper.PrincipalHelper;
 import app.oengus.service.login.DiscordService;
 import app.oengus.service.login.TwitchService;
-import app.oengus.service.login.TwitterLoginService;
 import app.oengus.service.repository.SubmissionRepositoryService;
 import app.oengus.service.repository.UserRepositoryService;
 import app.oengus.spring.JWTUtil;
@@ -21,6 +25,7 @@ import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import javax.annotation.Nullable;
 import javax.security.auth.login.LoginException;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -28,7 +33,6 @@ import java.util.stream.Collectors;
 @Service
 public class UserService {
     private final DiscordService discordService;
-    private final TwitterLoginService twitterLoginService;
     private final TwitchService twitchService;
     private final JWTUtil jwtUtil;
     private final UserRepositoryService userRepositoryService;
@@ -40,7 +44,7 @@ public class UserService {
 
     @Autowired
     public UserService(
-        final DiscordService discordService, final TwitterLoginService twitterLoginService,
+        final DiscordService discordService,
         final TwitchService twitchService, final JWTUtil jwtUtil, final UserRepositoryService userRepositoryService,
         final SubmissionRepositoryService submissionRepositoryService, final MarathonService marathonService,
         final SelectionService selectionService,
@@ -48,7 +52,6 @@ public class UserService {
         final ApplicationRepository applicationRepository
     ) {
         this.discordService = discordService;
-        this.twitterLoginService = twitterLoginService;
         this.twitchService = twitchService;
         this.jwtUtil = jwtUtil;
         this.userRepositoryService = userRepositoryService;
@@ -70,7 +73,7 @@ public class UserService {
         final User user = switch (service) {
             case "discord" -> this.discordService.login(code, host);
             case "twitch" -> this.twitchService.login(code, host);
-            case "twitter" -> this.twitterLoginService.login(code, host);
+            // case "twitter" -> this.twitterLoginService.login(code, host);
             default -> throw new LoginException("UNKNOWN_SERVICE");
         };
 
@@ -92,7 +95,7 @@ public class UserService {
         return switch (service) {
             case "discord" -> this.discordService.sync(code, host);
             case "twitch" -> this.twitchService.sync(code, host);
-            case "twitter" -> this.twitterLoginService.sync(code, host);
+            // case "twitter" -> this.twitterLoginService.sync(code, host);
             case "patreon" -> this.checkPatreonSync(code);
             default -> throw new LoginException("UNKNOWN_SERVICE");
         };
@@ -302,8 +305,7 @@ public class UserService {
             )
             .sorted(
                 Comparator.comparing((o) -> ((Submission) o).getMarathon().getStartDate()).reversed()
-            )
-            .collect(Collectors.toList());
+            ).toList();
 
         final Map<Integer, SelectionDto> selections = this.selectionService.findAllByCategory(filteredSubmissions.stream()
                 .flatMap((submission) ->
@@ -371,5 +373,123 @@ public class UserService {
         BeanHelper.copyProperties(dto, infoForUser);
 
         return this.applicationUserInformationRepository.save(infoForUser);
+    }
+
+    /* ==================== V2 stuff ==================== */
+    @Nullable
+    public ProfileDto getUserProfileV2(final String username) {
+        final User user = this.userRepositoryService.findByUsername(username);
+
+        if (user == null) {
+            return null;
+        }
+
+        return ProfileDto.fromUser(user);
+    }
+
+    public List<ModeratedHistoryDto> getUserModeratedHistory(final int userId) {
+        final User user = new User();
+        user.setId(userId);
+
+        return this.marathonService.findAllMarathonsIModerate(user)
+            .stream()
+            .filter((m) -> !m.getPrivate())
+            .map((m) -> {
+                final ModeratedHistoryDto hist = new ModeratedHistoryDto();
+
+                hist.setMarathonId(m.getId());
+                hist.setMarathonName(m.getName());
+                hist.setMarathonStartDate(m.getStartDate());
+
+                return hist;
+            })
+            .toList();
+    }
+
+    public List<ProfileHistoryDto> getUserProfileHistory(final int userId) {
+        final User user = new User();
+        user.setId(userId);
+
+        final List<Submission> submissions = this.submissionRepositoryService.findByUser(user);
+
+        final List<Submission> filteredSubmissions = submissions.stream()
+            .filter(
+                (submission) -> submission.getMarathon() != null
+            )
+            .sorted(
+                Comparator.comparing((o) -> ((Submission) o).getMarathon().getStartDate()).reversed()
+            ).toList();
+
+        final List<Category> categories = filteredSubmissions.stream()
+            .flatMap((submission) ->
+                submission.getGames()
+                    .stream()
+                    .flatMap(
+                        (game) -> game.getCategories().stream()
+                    )
+            ).toList();
+
+
+        final Map<Integer, SelectionDto> selections = this.selectionService.findAllByCategory(categories);
+        final List<ProfileHistoryDto> history = new ArrayList<>();
+
+        filteredSubmissions.forEach((submission) -> {
+            final Marathon marathon = submission.getMarathon();
+
+            if (marathon.getIsPrivate()) {
+                return;
+            }
+
+            final ProfileHistoryDto historyDto = new ProfileHistoryDto();
+            final List<SimpleGameDto> sgames = submission.getGames()
+                .stream()
+                .map((game) -> {
+                    final SimpleGameDto sgame = new SimpleGameDto();
+
+                    sgame.setId(game.getId());
+                    sgame.setName(game.getName());
+
+                    final List<SimpleCategoryDto> scats = game.getCategories()
+                        .stream()
+                        .map((cat) -> {
+                            final SimpleCategoryDto scat = new SimpleCategoryDto();
+
+                            scat.setId(cat.getId());
+                            scat.setName(cat.getName());
+                            scat.setEstimate(cat.getEstimate());
+                            scat.setStatus(cat.getStatus());
+
+                            return scat;
+                        })
+                        .collect(Collectors.toList());
+
+                    sgame.setCategories(scats);
+
+                    return sgame;
+                })
+                .collect(Collectors.toList());
+
+            historyDto.setMarathonId(marathon.getId());
+            historyDto.setMarathonName(marathon.getName());
+            historyDto.setMarathonStartDate(marathon.getStartDate());
+            historyDto.setGames(sgames);
+            // historyDto.setOpponents(new ArrayList<>(submission.getOpponents())); // TODO: do we use this?
+            historyDto.getGames().forEach((game) -> {
+                game.getCategories().forEach((category) -> {
+                    if (marathon.isSelectionDone()) {
+                        category.setStatus(selections.get(category.getId()).getStatus());
+                    } else {
+                        category.setStatus(Status.TODO);
+                    }
+                });
+                game.getCategories().sort(Comparator.comparing(SimpleCategoryDto::getId));
+            });
+
+            historyDto.getGames().sort(Comparator.comparing(SimpleGameDto::getId));
+
+            history.add(historyDto);
+        });
+
+        return history;
     }
 }
